# discord-bot-gui

./: .gitignore  Cargo.toml
res/: example_config.json
src/: app.rs  config.rs  discord.rs  main.rs  twilight_client.rs
src/backend/: mod.rs
src/backend/eframe_backend/: mod.rs
src/backend/sdl_backend/: mod.rs  painter.rs
src/discord/: event_thread.rs  fetch.rs  guild.rs  jobs.rs  shared_cache.rs  twilight_client.rs  util.rs
