[package]
name = "discord-bot-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.3",  optional = true }
gl    = { version = "0.14.0", optional = true }
sdl2  = { version = "0.35.2", features = ["bundled"], optional = true }

eframe  = { version = "0.23.0", optional = true }

egui = "0.23.0"
egui_extras = { version = "0.23.0", features = ["image", "http"] }

image = { version = "0.24", features = ["jpeg", "png"] }
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }

[features]
default = [ "sdl_backend" ]
sdl_backend = [ "dep:sdl2", "dep:gl", "dep:ahash" ]
eframe_backend = [ "dep:eframe" ]
